Det skal også lige virke på tyge version 3

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -144,7 +144,7 @@ endif !BUILD_PAKHTML
 ################################################################################
 .PHONY : html
 if BUILD_HTML
-html: statusfiles versionfil $(targetshortname)
+html: statusfiles $(targetshortname)
 
 $(targetshortname): alle/index.html
 
