--- a/Makefile.in
+++ b/Makefile.in
@@ -96,8 +96,8 @@ clean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 # all, html, pdf, palmpilot, pakhtml
 # Makefilen her skal være uptodate, samt alle underbibliotekers Makefile skal 
 # være i orden.
-.PHONY : all html pakhtml pdf palmpilot 
-all html pakhtml pdf palmpilot :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
+.PHONY : all html pdf sgml pakhtml palmpilot eksempelbackup
+all html pdf sgml pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører make $@ i $$dir" && \
 		cd $$dir && make $@ ; cd .. ;\
