Rækkefølgen af targets ændret

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -64,7 +64,7 @@ test:
 
 ################################################################################
 # her er det der skal laves
-all: start html pdf sgml pakhtml palmpilot eksempelbackup stop
+all: start html pakhtml palmpilot pdf sgml eksempelbackup stop
 
 
 ################################################################################
