--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -117,7 +117,7 @@ endif !BUILD_SGML
 # Laver en zip fil, kræver html target
 .PHONY : palmpilot
 if BUILD_PALM
-palmpilot_navn:=$(basenavn).palm.zip
+palmpilot_navn:=$(targetname)-palm-$(version).zip
 palmpilot:	$(palmpilot_navn)
 $(palmpilot_navn):	html
 	@echo ".........................................."
