PalmBuildDir kan nu fjernes...

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -124,7 +124,7 @@ $(palmpilot_navn):	html
 	@echo "Target $(targetshortname):palmpilot"
 	@echo ".........................................."
 	rm -f $(palmpilot_navn)
-	rm -f PalmBuildDir/
+	rm -Rf PalmBuildDir/
 	mkdir -p PalmBuildDir
 	cp palm/* PalmBuildDir || true
 	(cd PalmBuildDir && plucker-build -V 0  -P . -f $(targetname) `pwd`/home.html)
