Et par småfejl i byggedimse...

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -262,7 +262,7 @@ $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
 		find eksempler -type f | grep -v "/CVS/" | xargs -l1 -i= -r tar rvf $(targetname)-eksempler-$(version).tar = && \
 		gzip -9 $(targetname)-eksempler-$(version).tar; \
 	else \
-		@echo "Bogen" $(targetname) "har ikke nogen eksempler"; \
+		echo "Bogen" $(targetname) "har ikke nogen eksempler"; \
 	fi
 
 
