Et par småændringer til autotools byggeting.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -24,7 +24,7 @@ targetname:=linuxbog-$(notdir $(locdirname))
 
 # version
 # TODO: Skal det laves om til make depend?
-version:=$(shell grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | tail -n 1 | cut -d' ' -f2 > version.sgml; cat version.sgml)
+version:=$(shell grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2 > version.sgml; cat version.sgml)
 
 # Base navnet for pakker, mv
 basenavn:=$(targetname)-$(version)
