En detalje, så dist kommer på plads i index.php...

--- a/Makefile.in
+++ b/Makefile.in
@@ -114,7 +114,8 @@ DATE=`date +"%F"`
 dist:	Makefile distclean $(addsuffix /configure,$(SUBDIRS))
 	@for dir in $(SUBDIRS) ; do \
 		echo "*** Laver distributionspakke: $$dir.$(DATE).tar.gz" && \
-		tar --exclude CVS --exclude .cvsignore -zcf linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir ; \
+		tar --exclude CVS --exclude .cvsignore -zcf linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir && \
+		mv linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir ; \
 	done ;
 
 
