Lidt flere småting...

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -182,7 +182,7 @@ bog/index.html: $(dep_sgml_filer)
 	@echo "Target $(targetshortname):html"
 	@echo ".........................................."
 	@@echo "Target er HTML i" $(targetshortname)/bog
-	rm -rf $(targetname)*
+	rm -rf $(targetname)/
 	rm -rf stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
 	@echo '<!ENTITY magic "png">' > magic.sgml
 	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
