--- a/Makefile.in
+++ b/Makefile.in
@@ -113,7 +113,7 @@ all html pdf sgml pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makef
 DATE=`date +"%F"`
 dist:	Makefile distclean $(addsuffix /configure,$(SUBDIRS))
 	@for dir in $(SUBDIRS) ; do \
-		echo "*** Laver distributionspakke: $$dir.$(DATE).tar.gz" && \
+		echo "*** Laver distributionspakke: linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz" && \
 		tar --exclude CVS --exclude .cvsignore -zcf linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir && \
 		mv linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir ; \
 	done ;
