Forsøgt at fikse Hans splitindexscript. Kig efter filer kaldet idx.html

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -178,6 +178,8 @@ if HAVE_TIDY
 else !HAVE_TIDY
 	@echo "Du bør installere tidy"
 endif !HAVE_TIDY
+# Bygge idx filerne
+	(echo "Bygger idx filer" && cd bog && tr "\n" " " < stikord.html | ../fix_stikord.html.pl | ../splitindex.pl)
 else !BUILD_HTML
 	@echo "Overspring html"
 endif !BUILD_HTML
