--- a/Makefile_oldstyle
+++ b/Makefile_oldstyle
@@ -1,6 +1,6 @@
 # $Id$
 
-SUBDIRS = friheden unix wm applikationer admin program web sikkerhed c dokumentation forsker kontorbruger itplatform java signatur
+SUBDIRS = friheden unix wm applikationer admin program web sikkerhed c dokumentation kontorbruger java
 
 # version - skal bruges til samlingerne (i øjeblikket kun palm)
 version:=$(shell (cd friheden; grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | tail -n 1 | cut -d' ' -f2 > ../samling/version.sgml; cat ../samling/version.sgml))
