--- a/program/.cvsignore
+++ b/program/.cvsignore
@@ -1,12 +1,26 @@
-version.sgml
-Makefile
-stikord.sgml
-magic.sgml
-dato.sgml
-ophavsret.sgml
+aclocal.m4
+autom4te.cache
 bogoversigt.sgml
-texput.log
-strukturovervejelser.log
-strukturovervejelser.dvi
-strukturovervejelser.aux
+bootstrap
+config.log
+config.status
+configure
+configure.ac
+dato.sgml
+install-sh
 linuxbog.spec
+linuxbogurl.sgml
+magic.sgml
+Makefile
+Makefile.am
+Makefile.in
+misc
+missing
+mkinstalldirs
+ophavsret.sgml
+stikord.sgml
+strukturovervejelser.aux
+strukturovervejelser.dvi
+strukturovervejelser.log
+texput.log
+version.sgml
