--- a/web/.cvsignore
+++ b/web/.cvsignore
@@ -1,8 +1,22 @@
-version.sgml
-Makefile
-stikord.sgml
-magic.sgml
-dato.sgml
-ophavsret.sgml
+aclocal.m4
+autom4te.cache
 bogoversigt.sgml
+bootstrap
+config.log
+config.status
+configure
+configure.ac
+dato.sgml
+install-sh
 linuxbog.spec
+linuxbogurl.sgml
+magic.sgml
+Makefile
+Makefile.am
+Makefile.in
+misc
+missing
+mkinstalldirs
+ophavsret.sgml
+stikord.sgml
+version.sgml
