Forsøge at fikse palmpilot standalone target

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -227,7 +227,7 @@ endif BUILD_PDF
 .PHONY : clean
 clean:
 	@echo clean $(targetshortname)
-	rm -rf bog.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~ .#*[0-9] $(targetshortname)
+	rm -rf bog.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir bogps bogpdf $(targetname)* sideantal.txt *~ .#*[0-9] $(targetshortname)
 
 ################################################################################
 #
@@ -241,5 +241,5 @@ distclean-local:	clean
 # Alt fjernes, stort set ned til cvs
 .PHONY : reallyclean
 reallyclean:	clean distclean
-	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs
+	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs palm-faelles
 
