--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -282,7 +282,7 @@ $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
 .PHONY : clean
 clean:
 	@echo clean $(targetshortname)
-	rm -rf DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir PalmBuildDir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~ .#*[0-9] $(targetshortname)
+	rm -rf DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir PalmBuildDir bogps bogpdf $(targetname)* sideantal.txt *~ .#*[0-9] $(targetshortname)
 
 ################################################################################
 #
@@ -296,4 +296,4 @@ distclean-local:	clean
 # Alt fjernes, stort set ned til cvs
 .PHONY : reallyclean
 reallyclean:	clean distclean
-	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec linuxbogurl.sgml misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs
+	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec linuxbogurl.sgml misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs palm-faelles
