Forsøge at fikse palmpilot standalone target

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -101,6 +101,8 @@ $(palmpilot_navn):	html
 	rm -f $(palmpilot_navn)
 	rm -f PalmBuildDir/*.prc PalmBuildDir/*.pdb
 	mkdir -p PalmBuildDir
+	cp palm/* PalmBuildDir || true
+	cp palm-faelles/* PalmBuildDir || true
 	(cd PalmBuildDir && plucker-build -V 0  -P . -f $(targetname) `pwd`/home.html)
 	zip $(palmpilot_navn) PalmBuildDir/*.prc PalmBuildDir/*.pdb PalmBuildDir/*txt
 else !BUILD_PALM
