--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -127,6 +127,7 @@ $(palmpilot_navn):	html
 	rm -Rf PalmBuildDir/
 	mkdir -p PalmBuildDir
 	cp palm/* PalmBuildDir || true
+	cp palm-faelles/* PalmBuildDir || true
 	(cd PalmBuildDir && plucker-build -V 0  -P . -f $(targetname) `pwd`/home.html)
 	zip $(palmpilot_navn) PalmBuildDir/*.prc PalmBuildDir/*.pdb PalmBuildDir/*txt
 else !BUILD_PALM
