--- a/Makefile.alle
+++ b/Makefile.alle
@@ -92,7 +92,7 @@ sgml:
 # Laver en zip fil, kræver alle/index.html
 .PHONY : palmpilot
 if BUILD_PALM
-palmpilot_name:=$(basenavn).palm.zip
+palmpilot_navn:=$(basenavn).palm.zip
 palmpilot:	$(palmpilot_navn)
 $(palmpilot_navn):	html
 	@echo ".........................................."
