Diverse ændringer til afhængigheder - skal testes på tyge...

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -229,7 +229,7 @@ endif BUILD_PDF
 .PHONY : clean
 clean:
 	@echo clean $(targetshortname)
-	rm -rf bog.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir bogps bogpdf $(targetname)* sideantal.txt *~ .#*[0-9] $(targetshortname)
+	rm -rf DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir bogps bogpdf $(targetname)* sideantal.txt *~ .#*[0-9] $(targetshortname)
 
 ################################################################################
 #
@@ -243,5 +243,5 @@ distclean-local:	clean
 # Alt fjernes, stort set ned til cvs
 .PHONY : reallyclean
 reallyclean:	clean distclean
-	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs palm-faelles
+	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs palm-faelles bog.sgml
 
