--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -9,6 +9,7 @@
 ################################################################################
 -include Makefile.local
 
+
 ################################################################################
 # Diverse variable sættes
 ################################################################################
@@ -22,10 +23,6 @@ targetshortname:=$(notdir $(locdirname))
 # Med linuxbog- foran
 targetname:=linuxbog-$(notdir $(locdirname))
 
-# version
-# TODO: Skal det laves om til make depend?
-version:=$(shell grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2 > version.sgml; cat version.sgml)
-
 # Base navnet for pakker, mv
 basenavn:=$(targetname)-$(version)
 
@@ -33,7 +30,8 @@ basenavn:=$(targetname)-$(version)
 dato:=$(shell date +%d/%m-%Y> dato.sgml; cat dato.sgml)
 
 # Her er en liste af sgml-filer der ændres automatisk
-badsgmlfiles=dato.sgml version.sgml magic.sgml stikord.sgml bogoversigt.sgml ophavsret.sgml
+# badsgmlfiles=dato.sgml version.sgml magic.sgml stikord.sgml bogoversigt.sgml ophavsret.sgml
+badsgmlfiles=dato.sgml magic.sgml bogoversigt.sgml ophavsret.sgml
 
 # Her er  en liste af alle sgml
 # allesgmlfiles:=$(wildcard *.{sgml,xml})
@@ -43,13 +41,14 @@ allesgmlfiles:=$(wildcard *.sgml) $(wildcard *.xml)
 sgmlfiler:=$(filter-out $(badsgmlfiles),$(allesgmlfiles)) 
 
 # Og her sætter vi up til at inkludere auto. Bemærk =, ikke :=
-dep_sgml_filer=$(auto_sgml_filer) $(sgmlfiler)
+dep_sgml_filer=$(auto_sgml_filer) $(sgmlfiler) version.sgml stikord.sgml
 
 # Her er  en liste af alle eksempler
 alleeksfiles:=$(wildcard eksempler/*)
 
 # Her er en liste af sgml-filer der skal checkes
 eksfiler:=$(filter-out eksempler/CVS,$(alleeksfiles))
+
 
 ################################################################################
 # De egentlige targets
@@ -64,7 +63,7 @@ test:
 
 ################################################################################
 # her er det der skal laves
-all: start html pakhtml palmpilot pdf sgml eksempelbackup stop
+all: start html pakhtml palmpilot pdf eksempelbackup stop
 
 
 ################################################################################
@@ -93,23 +92,33 @@ stop:
 version:
 	@echo $(targetshortname) $(version)
 
+
 ################################################################################
-# Pak SGML-filerne sammen
+# Stikordsfilen "stikord.sgml"
 ################################################################################
-.PHONY : sgml
-if BUILD_SGML
-sgml: $(targetname)-sgml-$(version).tar.gz
-$(targetname)-sgml-$(version).tar.gz: $(dep_sgml_filer)
-	@echo ".........................................."
-	@echo "Target $(targetshortname):sgml"
-	@echo ".........................................."
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile)
-	(cd ..;ln -sf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
-	(cd ..;zip $(targetshortname)/$(targetname)-sgml-$(version).zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile)
-else !BUILD_SGML
-sgml:	
-	@echo "Overspringer sgml"
-endif !BUILD_SGML
+
+stikord.sgml:	$(filter-out stikord.sgml,$(dep_sgml_filer))
+	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml && \
+	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o StikordBuildDir bog.sgml && \
+	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -o stikord.sgml StikordBuildDir/HTML.index
+
+stikord.sgml.clean:	
+	rm -f stikord.sgml
+	rm -Rf StikordBuildDir/
+
+
+################################################################################
+# Versionsfilen "version.sgml"
+################################################################################
+
+version:=$(shell grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2)
+version.sgml:	apprevhist.sgml
+	grep -A2 "<listitem>" apprevhist.sgml | head -n 2 |\
+	grep Version | sed 's/.*Version//' | cut -d' ' -f2 > version.sgml
+
+version.sgml.clean:	
+	rm -f version.sgml
+
 
 ################################################################################
 # Byg Palm Pilot udgaven
@@ -134,6 +143,9 @@ else !BUILD_PALM
 palmpilot:	
 	@echo "Overspringer palmpilot"
 endif !BUILD_PALM
+
+palmpilot.clean:	
+	rm -f $(targetname)-palm-*.zip
 
 
 ################################################################################
@@ -169,6 +181,9 @@ pakhtml:
 	@echo "Overspringer pakhtml"
 endif !BUILD_PAKHTML
 
+pakhtml.clean:	
+	rm -f $(targetname)-html-*.tar.gz $(targetname)-html-*.zip $(targetname)-htmlub-*.tar.gz $(targetname)-png-*.tar.gz 
+
 
 ################################################################################
 # Byg HTML-filerne
@@ -182,14 +197,16 @@ bog/index.html: $(dep_sgml_filer)
 	@echo ".........................................."
 	@@echo "Target er HTML i" $(targetshortname)/bog
 	rm -rf $(targetname)/
-	rm -rf stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
+#	rm -rf stikord.sgml magic.sgml $(targetname)-*.html.tar.gz bog
+# TODO: Hvordan fungerer afhængighederne imellem html og pakhtml?
+	rm -rf $(targetname)-*.html.tar.gz bog
 	@echo '<!ENTITY magic "png">' > magic.sgml
-	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
-	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o bog bog.sgml
-	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index
+#	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
+#	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o bog bog.sgml
+#	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index
 	rm -rf bog/
 	mkdir bog
-	db2html  -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
+	db2html -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
 	cp linuxbog.css bog
 if USE_SOFTLINKS
 	(cd bog && ln -s ../images/*.png .)
@@ -214,6 +231,10 @@ html:
 	@echo "Overspringer html"
 endif !BUILD_HTML
 
+html.clean:	
+	rm -Rf bog/
+
+
 ################################################################################
 # Byg PDF filen
 ################################################################################
@@ -226,17 +247,33 @@ $(targetname)-$(version).pdf: $(dep_sgml_filer)
 	@echo ".........................................."
 	@echo '<!ENTITY magic "png">' > magic.sgml
 	@echo Opsætter PdfBuildDir
-	rm -rf PdfBuildDir stikord.sgml
-	mkdir PdfBuildDir
-	(cd PdfBuildDir && ln -s ../*sgml .)
-	(cd PdfBuildDir && ln -s ../*xml .)
-	(cd PdfBuildDir && ln -s ../images/*png .)
-	@echo Bygger stikord.sgml
-	(cd PdfBuildDir && collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml)
-	(cd PdfBuildDir && jw -V html-index -V nochunks -f docbook -b html -o bog bog.sgml)
-	(cd PdfBuildDir && collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index)
+#	@rm -rf PdfBuildDir stikord.sgml
+	@rm -rf PdfBuildDir
+	@mkdir PdfBuildDir
+	@cd PdfBuildDir && ln -s ../*sgml ../*xml ../images/*png .
+#	@echo Bygger stikord.sgml
+#	@cd PdfBuildDir && collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml && \
+#	jw -V %use-id-as-filename% -V html-index -f docbook -b html -o bog bog.sgml && \
+#	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index
+##	jw -V html-index -V nochunks -f docbook -b html -o bog bog.sgml && \
 	@echo Bygger PDF fil
-	(cd PdfBuildDir && echo "Running db2pdf" && db2pdf bog.sgml; true)
+# Ideen er at hvis db2pdf fejler med en fejlkode 9, så køres db2pdf igen - for
+# vi ved ikke hvad fejlkode 9 betyder, men tilsyneladende vil det virke "alligevel".
+# TODO: Dette skal testes på tyge!
+	@cd PdfBuildDir && \
+	db2pdf -V %use-id-as-filename% bog.sgml ; \
+	if test $$? -eq 9 ; then \
+		echo Kører db2pdf igen ; \
+		db2pdf -V %use-id-as-filename% bog.sgml ; \
+		if test $$? -eq 9 ; then \
+			echo Kører db2pdf igen ; \
+			db2pdf -V %use-id-as-filename% bog.sgml ; \
+			if test $$? -eq 9 ; then \
+				true ; \
+			fi \
+		fi \
+	fi
+#	(cd PdfBuildDir && echo "Running db2pdf" && db2pdf bog.sgml; true)
 #	(cd PdfBuildDir && echo "Running db2pdf 1/2" && db2pdf bog.sgml; true)
 #	(cd PdfBuildDir && echo "Running db2pdf 2/2" && db2pdf bog.sgml; true)
 	mv PdfBuildDir/bog.pdf $(targetname)-$(version).pdf
@@ -246,18 +283,22 @@ $(targetname)-$(version).pdf: $(dep_sgml_filer)
 	@echo ""
 endif BUILD_PDF
 
+pdf.clean:	
+	rm -Rf PdfBuildDir sideantal.txt $(targetname)-*.pdf
+
 
 ################################################################################
 # Backup af eksempel-filer
 ################################################################################
 
+# TODO : Spørge Peter Toft hvad meningen er med det her....
 eksempelbackup:  $(targetname)-eksempler-$(version).tar.gz
 $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
 	if test "x$(eksfiler)" != "x" ; then \
 		rm -f $(targetname)-eksempler-$(version).tar.gz && \
 		touch $(targetname)-eksempler-$(version).tar && \
-		cat dato.sgml > eksempler/BACKUPDATO && \
-		(cd ..;tar cvf  $(targetshortname)/$(targetname)-eksempler-$(version).tar $(targetshortname)/eksempler/BACKUPDATO) && \
+		date +%d/%m-%Y > eksempler/BACKUPDATO && \
+		(cd .. && tar cvf $(targetshortname)/$(targetname)-eksempler-$(version).tar $(targetshortname)/eksempler/BACKUPDATO) && \
 		rm -f eksempler/BACKUPDATO && \
 		find eksempler -type f | grep -v "/CVS/" | xargs -l1 -i= -r tar rvf $(targetname)-eksempler-$(version).tar = && \
 		gzip -9 $(targetname)-eksempler-$(version).tar; \
@@ -265,25 +306,30 @@ $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
 		echo "Bogen" $(targetname) "har ikke nogen eksempler"; \
 	fi
 
+eksempelbackup.clean:	
+	rm -f $(targetname)-eksempler-*.tar.gz 
+
 
 ################################################################################
 # CLEAN targets
 ################################################################################
 
 # Vi har tre forskellige slags clean targets.
-# clean: targets fjernes, men autogenererede bliver ikke fjernet.
+# clean: targets fjernes, og lokalt autogenererede bliver fjernet.
 # distclean: clean til distribution, dvs. filer kopieret af toplevel configure
-# må ikke fjernes, men autogenererede sgml filer må godt.
+# må ikke fjernes, men autoconf filer bliver.
 # reallyclean: Alt fjernes, helt ned til cvs nærmest
 
-# TODO: dato.sgml, version.sgml, stikord.sgml, magic.sgml
+# TODO: magic.sgml
+
 
 ################################################################################
 # Target og diverse filer fjernes. Autogenererede filer beholdes
 .PHONY : clean
-clean:
+clean:	stikord.sgml.clean version.sgml.clean palmpilot.clean pakhtml.clean html.clean pdf.clean eksempelbackup.clean
 	@echo clean $(targetshortname)
-	rm -rf DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml PdfBuildDir PalmBuildDir bogps bogpdf $(targetname)* sideantal.txt *~ .#*[0-9] $(targetshortname)
+	rm -rf bog.junk/ dato.sgml *~ .#*[0-9]
+
 
 ################################################################################
 #
@@ -291,10 +337,10 @@ clean:
 # Cleaner så det passer til en dist
 # TODO: Fixme
 distclean-local:	clean
-	rm -rf magic.sgml stikord.sgml autom4te.cache $(auto_sgml_filer) config.log config.status 
+	rm -rf magic.sgml autom4te.cache $(auto_sgml_filer) config.log config.status 
 
 ################################################################################
 # Alt fjernes, stort set ned til cvs
 .PHONY : reallyclean
 reallyclean:	clean distclean
-	rm -Rf dato.sgml version.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec linuxbogurl.sgml misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs palm-faelles
+	rm -Rf dato.sgml bogoversigt.sgml ophavsret.sgml linuxbog.css linuxbog.spec linuxbogurl.sgml misc aclocal.m4 bootstrap configure configure.ac install-sh Makefile.am Makefile.in missing mkinstalldirs palm-faelles/
