--- a/Makefile.in
+++ b/Makefile.in
@@ -113,9 +113,10 @@ all html pdf sgml pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makef
 DATE=`date +"%F"`
 dist:	Makefile distclean $(addsuffix /configure,$(SUBDIRS))
 	@for dir in $(SUBDIRS) ; do \
-		echo "*** Laver distributionspakke: linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz" && \
-		tar --exclude CVS --exclude .cvsignore -zcf linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir && \
-		mv linuxbog-$$dir-dist-`cat $$dir/version.sgml`.tar.gz $$dir ; \
+		export VERSION=`cd $$dir && grep -A2 "<listitem>" apprevhist.sgml | head -n 2 | grep Version | sed 's/.*Version//' | cut -d' ' -f2` && \
+		echo "*** Laver distributionspakke: linuxbog-$$dir-dist-$$VERSION.tar.gz" && \
+		tar --exclude CVS --exclude .cvsignore -zcf linuxbog-$$dir-dist-$$VERSION.tar.gz $$dir && \
+		mv linuxbog-$$dir-dist-$$VERSION.tar.gz $$dir ; \
 	done ;
 
 
