stikord.sgml behøver en magic.sgml ...

--- a/Makefile.in
+++ b/Makefile.in
@@ -44,7 +44,9 @@ Makefile:	$(FALLES_FILER) $(BYGGE_FILER)
 # Men, for at køre en distclean skal der være en makefile
 # For at have en makefile, skal der være en configure
 # For at køre en configure skal der være en bootstrap... suk
-configure:	
+configure:
+	echo "Hvad dælen, jeg troede jeg var forældet"
+	exit 1	
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører ./configure i $$dir" && \
 		cd $$dir && ./configure && cd .. || exit ;\
