stikord.sgml behøver en magic.sgml - og et rigtigt test

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -98,7 +98,7 @@ version:
 ################################################################################
 
 stikord.sgml:	$(filter-out stikord.sgml,$(dep_sgml_filer))
-	if ! -e magic.sgml ; then \
+	if test ! -e magic.sgml ; then \
 		echo '<!ENTITY magic "png">' > magic.sgml ; \
 	fi
 	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml && \
