Rekursivt; se rekursiv

--- a/Makefile.in
+++ b/Makefile.in
@@ -77,7 +77,7 @@ $(addsuffix /Makefile,$(SUBDIRS) $(ALLE)):	$(BYGGE_FILER)
 distclean:	$(addsuffix /Makefile,$(SUBDIRS))
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører make distclean i $$dir" && \
-		cd $$dir && make distclean && cd .. || exit ;\
+		cd $$dir && $(MAKE) distclean && cd .. || exit ;\
 	done ;
 
 
@@ -89,7 +89,7 @@ clean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 	rm -f *.tar.gz *~
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører make $@ i $$dir" && \
-		cd $$dir && make $@ ; cd .. ;\
+		cd $$dir && $(MAKE) $@ ; cd .. ;\
 	done ;
 
 
@@ -102,7 +102,7 @@ clean:	$(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 all html pdf sgml pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(ALLE))
 	@for dir in $(SUBDIRS) $(ALLE) ; do \
 		echo "*** Kører make $@ i $$dir" && \
-		cd $$dir && make $@ ; cd .. ;\
+		cd $$dir && $(MAKE) $@ ; cd .. ;\
 	done ;
 
 
