Føjet de filer (fra `make palm`) som `make clean` ikke sletter til ".cvsignore".

--- a/program/.cvsignore
+++ b/program/.cvsignore
@@ -1,5 +1,7 @@
 aclocal.m4
 autom4te.cache
+bog
+bog.junk
 bogoversigt.sgml
 bootstrap
 config.log
@@ -18,6 +20,8 @@ misc
 missing
 mkinstalldirs
 ophavsret.sgml
+palm-faelles
+PalmBuildDir
 stikord.sgml
 strukturovervejelser.aux
 strukturovervejelser.dvi
