--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -151,7 +151,7 @@ palmpilot:
 endif !BUILD_PALM
 
 palmpilot.clean:	
-	rm -f $(targetname)-palm-*.zip PalmBuildDir
+	rm -Rf $(targetname)-palm-*.zip PalmBuildDir/
 
 
 ################################################################################
