--- a/dokumentation/Makefile.local
+++ b/dokumentation/Makefile.local
@@ -7,7 +7,7 @@ dokumentation_auto_sgml_filer:=usedtags_now.sgml
 auto_sgml_filer:=$(auto_sgml_filer) $(dokumentation_auto_sgml_filer)
 
 # Regel for at lave sgml filer
-usedtags_now.sgml:	$(filter-out stikord.sgml $(filter-out $(dokumentation_auto_sgml_filer),$(wildcard *.sgml)))
+usedtags_now.sgml:	$(filter-out stikord.sgml,$(filter-out $(dokumentation_auto_sgml_filer),$(wildcard *.sgml)))
 	cat $(filter-out $(dokumentation_auto_sgml_filer),$(wildcard *.sgml)) | ./usedtags.pl | sort -nr > usedtags_now.sgml
 
 ################################################################################
@@ -20,5 +20,5 @@ dokumentation_local_path:=../dokumentation/
 
 alle_auto_sgml_filer:=$(alle_auto_sgml_filer) $(addprefix $(dokumentation_local_path),$(dokumentation_auto_sgml_filer))
 
-$(addprefix $(dokumentation_local_path),$(dokumentation_auto_sgml_filer)):	$(filter-out $(addprefix $(dokumentation_local_path),$(dokumentation_auto_sgml_filer)) $(badfiles),$(wildcard $(addprefix $(dokumentation_local_path),*.sgml)))
+$(addprefix $(dokumentation_local_path),$(dokumentation_auto_sgml_filer)):	$(filter-out,$(addprefix $(dokumentation_local_path),$(dokumentation_auto_sgml_filer)) $(badfiles),$(wildcard $(addprefix $(dokumentation_local_path),*.sgml)))
 	(cd $(dokumentation_local_path) && make -f Makefile.local $(dokumentation_auto_sgml_filer))	
