Jeg fatter intet...

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -212,7 +212,7 @@ bog/index.html: $(dep_sgml_filer)
 #	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index
 	rm -rf bog/
 	mkdir bog
-	db2html -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
+	db2html -V %stylesheet%=linuxbog.css -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
 	cp linuxbog.css bog
 if USE_SOFTLINKS
 	(cd bog && ln -s ../images/*.png .)
