--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -226,6 +226,9 @@ else !HAVE_PERL_IMAGE_SIZE
 endif !HAVE_PERL_IMAGE_SIZE
 if HAVE_TIDY
 	(cd bog;tidy -latin1 -f err.txt -imu *html;rm -f err.txt)
+if ADD_SUBMITBOX
+	(cd bog && ../../addsubmitbox)
+endif ADD_SUBMITBOX
 else !HAVE_TIDY
 	@echo "Du bør installere tidy"
 endif !HAVE_TIDY
