--- a/Makefile.alle
+++ b/Makefile.alle
@@ -177,6 +177,9 @@ endif !HAVE_PERL_IMAGE_SIZE
 	(echo "Bygger idx filer" && cd bog && tr "\n" " " < stikord.html | ../fix_stikord.html.pl | ../splitindex.pl)
 if HAVE_TIDY
 	(cd bog;tidy -latin1 -f err.txt -imu *html;rm -f err.txt)
+if ADD_SUBMITBOX
+	(cd bog && ../../addsubmitbox)
+endif ADD_SUBMITBOX
 else !HAVE_TIDY
 	@echo "Du bør installere tidy"
 endif !HAVE_TIDY
